# cmake-git-versioning-example

./: .gitignore  CMakeLists.txt  main.c
train/: README.md
trainexample/: README.md
trainexample/template/: CMakeLists.txt  SomeProject_version.h  foobar_version.h
trainexample/template/version_generator/: GenerateVersionHeader.cmake  funcGetVersion.c  funcGetVersion.h  generateheader_version.h.in  generateruntest_file.c.in  runversiontest.c
